<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_traitement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lmachillot.ths.UpdateTraitementActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/titreupdatetraitement"
        android:text="@string/titreupdatetraitement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/lignenomupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titreupdatetraitement"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/nom"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <EditText
            android:id="@+id/nomtraitementupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintnom"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lignedosageupdate"
        android:layout_below="@id/lignenomupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/dosagetitre"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <EditText
            android:id="@+id/dosageupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintdosage"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lignehormonesupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lignedosageupdate"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/hormonetitre"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />


        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listehormonesupdate"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lignefrequpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lignehormonesupdate"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequencetitre"
            android:layout_marginEnd="20dp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequencetxt"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/freqtraitementupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintfrequence"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jours"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/lignefrequpdate"
        android:id="@+id/lignetypeupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titretype"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <Spinner
            android:id="@+id/typeupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

        </Spinner>



    </LinearLayout>


    <Button
        android:id="@+id/butupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/lignetypeupdate"
        android:text="@string/valider"
        android:onClick="updateTraitement" />

    <Button
        android:id="@+id/butmodiftraitement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/butupdate"
        android:text="@string/changerzones"
        android:onClick="updateZones" />

    <Button
        android:layout_below="@id/butmodiftraitement"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#e52222"
        android:text="@string/supprimer"
        android:onClick="supprimerTraitement"
        android:layout_centerHorizontal="true"
        />

    </RelativeLayout>

</ScrollView>
